@@ -1,6 +1,10 @@
 caputils-0.7.5
 --------------
 
+	* add: ability to set buffer size at initialization (use 0 for old
+	       default)
+	* change: the buffering behaviour has changed from only buffering when
+	          empty to continious buffering.
 	* change: `stream_t` is now a pointer and should be used in place of
 	          `struct stream*`. Existing applications should change from
 	          `stream_t*` to `stream_t`.
